--- a/React/src/components/LoginButton/LoginButton.scss
+++ b/React/src/components/LoginButton/LoginButton.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   position: relative;
   width: 13em;
-  margin: 0.2em;
+  margin: 10px auto;
   padding: 0 15px 0 46px;
   border: none;
   text-align: left;
@@ -14,6 +14,7 @@
   font-size: 16px;
   color: #fff;
   cursor: pointer;
+  display: block;
 
   &:before {
     content: "";
@@ -40,15 +41,33 @@
   background-image: linear-gradient(#4c69ba, #3b55a0);
   /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
   text-shadow: 0 -1px 0 #354c8c;
+
+  &:before {
+    border-right: #364e92 1px solid;
+    background: url("https://i.ibb.co/M7KyhSw/facebook.png") 6px 6px no-repeat;
+  }
+  &:hover, &:focus {
+    background-color: #5b7bd5;
+    background-image: linear-gradient(#5b7bd5, #4864b1);
+  }
 }
-.loginBtn--facebook:before {
-  border-right: #364e92 1px solid;
-  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_facebook.png") 6px 6px no-repeat;
-}
-.loginBtn--facebook:hover,
-.loginBtn--facebook:focus {
-  background-color: #5b7bd5;
-  background-image: linear-gradient(#5b7bd5, #4864b1);
+
+/* Twitter */
+.loginBtn--twitter {
+  background-color: #f21d41;
+  background-image: linear-gradient(#f21d41, #cc1735);
+  /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
+  text-shadow: 0 -1px 0 #ad1f1f;
+
+  &:before {
+    border-right: #f21d41 1px solid;
+    background: url("https://i.ibb.co/5M2KhMN/google.png") 6px 6px no-repeat;
+  }
+
+  &:hover, &:focus {
+    background-color: #db1f3e;
+    background-image: linear-gradient(#db1f3e, #e22626);
+  }
 }
 
 /* Google */
