--- a/React/src/components/LoginButton/LoginButton.scss
+++ b/React/src/components/LoginButton/LoginButton.scss
@@ -52,8 +52,8 @@
   }
 }
 
-/* Twitter */
-.loginBtn--twitter {
+/* google */
+.loginBtn--google {
   background-color: #f21d41;
   background-image: linear-gradient(#f21d41, #cc1735);
   /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
@@ -68,18 +68,4 @@
     background-color: #db1f3e;
     background-image: linear-gradient(#db1f3e, #e22626);
   }
-}
-
-/* Google */
-.loginBtn--google {
-  /*font-family: "Roboto", Roboto, arial, sans-serif;*/
-  background: #dd4b39;
-}
-.loginBtn--google:before {
-  border-right: #bb3f30 1px solid;
-  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png") 6px 6px no-repeat;
-}
-.loginBtn--google:hover,
-.loginBtn--google:focus {
-  background: #e74b37;
 }
