--- a/React/src/components/LoginButton/LoginButton.scss
+++ b/React/src/components/LoginButton/LoginButton.scss
@@ -72,14 +72,14 @@
 
 /* Linkedin */
 .loginBtn--linkedin {
-  background-color: #2566c2;
-  background-image: linear-gradient(#2566c2, #154183);
+  background-color: #2774b3;
+  background-image: linear-gradient(#2774b3, #1f659e);
   /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
   text-shadow: 0 -1px 0 #354c8c;
 
   &:before {
     border-right: rgb(35, 54, 105) 1px solid;
-    background: url("https://i.ibb.co/M7KyhSw/facebook.png") 6px 6px no-repeat;
+    background: url("https://i.ibb.co/5kXRzxN/linkedin.png") 6px 6px no-repeat;
   }
   &:hover, &:focus {
     background-color: #3e7fdb;
